[metadata]
name = stdfs
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
description = C++ std::filesystem API in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/douglasdavis/stdfs
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: C++
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
python_requires = >=3.6
